[package]
name = "redis-cmd"
version = "0.1.0"
edition = "2021"
description = "An async Redis client for Rust built on redis crate."
readme = "README.md"
repository = "https://github.com/ptechen/redis-cmd"
homepage = "https://github.com/ptechen/redis-cmd"
keywords = ["redis", "futures", "async", "cluster", "tokio"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23", features = ["connection-manager", "cluster", "streams", "json", "tokio-comp"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
toml = "0.5.9"


[features]
default = ["single"]
cluster = []
single = []
